--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
 <body>
     
-      <div id="app"></div>
-      
+  <div id="app"></div>
+  <button id="play-sound-btn">Play Sound</button>
+  <script src="main.js"></script>
+
   
 
 </body>
